documentacion/obtenida/ARINC 429/driver and software/PC429-2/API/P42W32.H

typedef void VOID;
typedef int INT;
typedef unsigned char BYTE;
typedef unsigned short USHORT;
typedef unsigned long ULONG;
typedef int HCARD;

P42W32API VOID __stdcall DRV429_WriteB(INT addrval,HCARD handleval,BYTE value);

P42W32API VOID __stdcall DRV429_WriteCtrlReg(USHORT value,HCARD handleval);

P42W32API VOID __stdcall DRV429_WriteL(INT addrval,HCARD handleval,ULONG value);

P42W32API VOID __stdcall DRV429_WritePulseReg(USHORT value,HCARD handleval);

P42W32API VOID __stdcall DRV429_WriteRegA(USHORT value,HCARD handleval);

P42W32API VOID __stdcall DRV429_WriteRegB(USHORT value,HCARD handleval);

P42W32API VOID __stdcall DRV429_WriteStatusReg(USHORT value,HCARD handleval);

P42W32API VOID __stdcall DRV429_WriteW(INT addrval,HCARD handleval,USHORT value);

P42W32API VOID __stdcall DRV429_WrOpt(INT option,HCARD handleval);

P42W32API VOID __stdcall DRV429_WrSeq(HCARD handleval,USHORT bottom,USHORT top,USHORT tail,USHORT head);

/**
*
*    PC429 32-BIT DLL Driver predefined constants.
*
**/

#define CH0                     0x0001          /*Channel 0*/
#define CH1                     0x0002          /*Channel 1*/
#define CH2                     0x0004          /*Channel 2*/
#define CH3                     0x0008          /*Channel 3*/
#define CH4                     0x0010          /*Channel 4*/
#define CH5                     0x0020          /*Channel 5*/
#define CH6                     0x0040          /*Channel 6*/
#define CH7                     0x0080          /*Channel 7*/
#define CHNONE                  0x0000          /*Channel none*/

#define SDI00                   0x0001      /*SDI filter 00*/
#define SDI01                   0x0002      /*SDI filter 01*/
#define SDI10                   0x0004      /*SDI filter 10*/
#define SDI11                   0x0008      /*SDI filter 11*/