documentacion/obtenida/ARINC 429/driver and software/PC429-2/API/P42W32NET.VB

    Public Declare Sub DRV429_WriteB Lib "P42W32.DLL" Alias "_DRV429_WriteB@12" (ByVal addrval As Integer, ByVal handleval As Integer, ByVal value As Integer)
    Public Declare Sub DRV429_WriteCtrlReg Lib "P42W32.DLL" Alias "_DRV429_WriteCtrlReg@8" (ByVal value As Short, ByVal handleval As Integer)
    Public Declare Sub DRV429_WriteL Lib "P42W32.DLL" Alias "_DRV429_WriteL@12" (ByVal addrval As Integer, ByVal handleval As Integer, ByVal value As Integer)
    Public Declare Sub DRV429_WritePulseReg Lib "P42W32.DLL" Alias "_DRV429_WritePulseReg@8" (ByVal value As Short, ByVal handleval As Integer)
    Public Declare Sub DRV429_WriteRegA Lib "P42W32.DLL" Alias "_DRV429_WriteRegA@8" (ByVal value As Short, ByVal handleval As Integer)
    Public Declare Sub DRV429_WriteRegB Lib "P42W32.DLL" Alias "_DRV429_WriteRegB@8" (ByVal value As Short, ByVal handleval As Integer)
    Public Declare Sub DRV429_WriteStatusReg Lib "P42W32.DLL" Alias "_DRV429_WriteStatusReg@8" (ByVal value As Short, ByVal handleval As Integer)
    Public Declare Sub DRV429_WriteW Lib "P42W32.DLL" Alias "_DRV429_WriteW@12" (ByVal addrval As Integer, ByVal handleval As Integer, ByVal value As Short)
    Public Declare Sub DRV429_WrOpt Lib "P42W32.DLL" Alias "_DRV429_WrOpt@8" (ByVal optionval As Integer, ByVal handleval As Integer)
    Public Declare Sub DRV429_WrSeq Lib "P42W32.DLL" Alias "_DRV429_WrSeq@20" (ByVal handleval As Integer, ByVal bottom As Short, ByVal top As Short, ByVal tail As Short, ByVal head As Short)

    '**
    '*
    '*  Constants
    '*
    '**

    Public Const CH0 As Integer = &H1                    'Channel 0
    Public Const CH1 As Integer = &H2                    'Channel 1
    Public Const CH2 As Integer = &H4                    'Channel 2
    Public Const CH3 As Integer = &H8                    'Channel 3
    Public Const CH4 As Integer = &H10                   'Channel 4
    Public Const CH5 As Integer = &H20                   'Channel 5
    Public Const CH6 As Integer = &H40                   'Channel 6
    Public Const CH7 As Integer = &H80                   'Channel 7
    Public Const CHNONE As Integer = &H0                 'Channel none

    Public Const GAPNOWRD As Integer = &H8000           'Gap NOWRD bit
    Public Const GAPSYNC As Integer = &H4000            'Gap SYNC  bit
    Public Const GAPLOG As Integer = &H2000             'Gap LOG   bit
    Public Const GAPERWRD As Integer = &H1000           'Gap ERWRD bit

    '**
    '*
    '*  The following three constants are for compatibility with earlier
    '*  versions of the Driver.  They can only be used with software
    '*  operating the PC429-1.
    '*
    '**

    Public Const SEQRECCHXMIT As Integer = &H2           'Selects transmit channel
    Public Const SEQRECCHRCV As Integer = &H1            'Selects receive channel
    Public Const SEQRECCHXMITRCV As Integer = &H3        'Selects transmit and receive channel

    Public Const SEQRECMODENORMAL As Integer = &H0       'Enables interval mode
    Public Const SEQRECMODEDELTA As Integer = &H1        'Enables delta mode
    Public Const SEQRECMODEINTRVL As Integer = &H2       'Enables interval mode
    Public Const SEQRECMODEDELTINT As Integer = &H3      'Enables delta and interval mode
    Public Const SEQRECMODEMON As Integer = &H4          'Enables monitor mode

    Public Const SPEEDCLKHIGH As Integer = &H0           'Clock resolution .1 msec
    Public Const SPEEDCLKMED As Integer = &H1            'Clock resolution  1 msec
    Public Const SPEEDCLKLOW As Integer = &H2            'Clock resolution 10 msec

    Public Const SDI00 As Integer = &H1                  'SDI filter 00
    Public Const SDI01 As Integer = &H2                  'SDI filter 01
    Public Const SDI10 As Integer = &H4                  'SDI filter 10
    Public Const SDI11 As Integer = &H8                  'SDI filter 11

End Module
